# geotex

./: CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: build_wheels.yml
geotex/: __init__.py
src/: bindings.cpp
tests/: conftest.py  test_geotex.py
