[project]
name = "geotex"
version = "0.1.0"
description = "Geogram texturing (atlas) bindings"
authors = [
    {name = "Mark Boss", email = "hello@markboss.me"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
]

[build-system]
requires = ["scikit-build-core>=0.10.0", "pybind11-stubgen", "delocate>=0.10.3"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
install.strip = true
cmake.build-type = "Release"
wheel.packages = ["geotex"]
wheel.license-files = ["LICENSE"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
